# qsim

./: .gitignore  AGENTS.md  README.md  qubit_notebook.jl
QSimPrototype/: Manifest.toml  (+1 more)
prototype/: AGENTS.md  Project.toml  gate.jl  main.jl  pyproject.toml  qsim.jl  quantum_device.jl  qubit.jl
prototype/examples/: example_bb84.py  example_qrng.py  example_quantum_circuit.py  example_quantum_state.py  example_qubit_measurement.py  qrng.py
prototype/python/src/quantum/algorithms/: random.py
prototype/python/tests/quantum/algorithms/: test_random.py
prototype/python/tests/utils/math/: test_helper_funcs.py
prototype/quantum/: circuit.py  gate.py  quantum_state.py  qubit.py
prototype/src/: Prototype.jl  gate.jl  main.jl
prototype/src/quantum/: circuit.py  device.py  gate.py  qubit.py  simulation.py  state.py  viz.py
prototype/src/quantum/algorithms/: bb84.py  qrng.py  random.py
prototype/src/utils/: channel.py  data.py  gates.py  math.py  typing.py
prototype/src/utils/channels/: channel.py  classic_channel.py
prototype/src/utils/comms/: channel.py
prototype/src/utils/math/: bit.py  helper_funcs.py  matrix.py  scalar.py  vector.py
prototype/src/utils/math/binary/: __init__.py  bitstring.py
prototype/tests/: test_quantum.py  test_utils.py
prototype/tests/quantum/: test_device.py  test_gate.py  test_simulation.py  test_state.py
prototype/tests/quantum/algorithms/: test_random.py
prototype/tests/utils/: test_channel.py  test_math.py  test_typing.py
prototype/tests/utils/math/: test_bit.py  test_helper_funcs.py  test_matrix.py  test_vector.py
(+32 files in other folders)
