[project]
name = "prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.sources]
prototype = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "jedi-language-server>=0.46.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]
